--- a/FE/Aula 3 js/Exs JavaS/index.html
+++ b/FE/Aula 3 js/Exs JavaS/index.html
@@ -4,23 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercícios</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="icon" href="docs/icons8-dossiê-64.png">
 </head>
 <body>
     <div id="con1">
+        <img src="docs/icons8-placa-do-automóvel-50.png" alt="idone placa" width="40px">
       <h3>Digite a placa que deseja verificar</h3>
-      <input type="text" id="busca">
+      <input type="text" id="busca" placeholder="Placa do veiculo">
       <button id="btn">Validar</button>
       <p></p>
     </div>
     <div id="con2">
+        <img src="docs/icons8-cartão-de-identidade-eletrônico-48.png" alt="icone cpf" width="40px">
         <h3>Digite um CPF para a validacão</h3>
-        <input type="text" id="cbusca">
+        <input type="text" id="cbusca" placeholder="CPF">
         <button id="cbtn">Validar</button>
         <p id="resp"></p>
     </div>
-    
+    <div id="con3">
+        <img src="docs/icons8-vários-smartphones-50 (1).png" alt="telefones" width="40px">
+        <h3>Digite o DDD e quantos numeros quer gerar</h3>
+        <input type="text" id="ddd" alt="DDD" placeholder="DDD">
+        <input type="text" id="ger" placeholder="Quantidade">
+        <button id="gbtn">Gerar</button>
+        <p id="tel"></p>
+    </div>
+    <div id="con4">
+        <img src="docs/icons8-identidade-de-cachorro-50.png" alt="telefones" width="40px">
+        <h3>Digite quantos CPFs deseja gerar</h3>
+        <input type="text" id="ger2" placeholder="Quantidade">
+        <button id="ebtn">Gerar</button>
+        <p id="cs"></p>
+    </div>
 </body>
 <script src="Exs.js"></script>
 </html>
