--- a/FE/Aula 5 js/Ex aula/index.html
+++ b/FE/Aula 5 js/Ex aula/index.html
@@ -10,13 +10,14 @@
 </head>
 
 <body>
-    <div id="info">
+    <br id="info">
         <p>Nome completo</p>
         <input type="text" id="in-nome">
         <p>Cargo</p>
         <input type="text" id="in-cargo">
         <p>Salario</p>
-        <input type="text" id="in-salario" alt="salario">
+        <input type="text" id="in-salario" alt="salario"></br>
+        <button id="btn">Cadastrar</button>
     </div>
     <div id="table">
         <table>
