Aula 6 front end

--- a/FE/Aula 6 js/Ex3/index.html
+++ b/FE/Aula 6 js/Ex3/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="imagem/png" href="assets/users-free-icon-font.png" />
+
     <title>Funcionarios</title>
 </head>
-<body>
+
+<body onLoad="carregar()">
     <div class="funcionarios">
         <div class="info-funcionario modelo">
             <img id="img-funcionario" src="assets/do-utilizador.png" alt="">
             <p id="nome-funcionario">Nome Funcionario</p>
             <p id="cargo">Cargo</p>
             <p id="nivel">nivel</p>
-            <img src="" alt="">
+
+
+            <img onclick="removerItem(this)" class="botao" id="botao-lixo" src="assets/lixo.png" alt="" srcset="">
+
         </div>
     </div>
-    
+
 </body>
 <script src="index.js"></script>
+
 </html>
