aula 10 front js

--- a/FE/Aula 9 js/login.html
+++ b/FE/Aula 9 js/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
     <link rel="shortcut icon" href="assets/fingerprint-free-icon-font.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Login Tea</title>
 </head>
 <body>
     <div class="cont">
@@ -16,7 +16,7 @@
             <div class="itens"><h1>LOGIN</h1></div>
 
             <div class="itens"><p>Email</p></div>
-            <div class="itens"><input id="user" type="text"></div>
+            <div class="itens"><input id="user" type="text" aria-required></div>
 
             <div class="itens"><p>Senha</p></div>
             <div class="itens"><input id="senha" type="password"></div>
