--- a/FE/Aula 9 js/pagina.html
+++ b/FE/Aula 9 js/pagina.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="assets/cha-quente.png" type="image/x-icon">
+   <link rel="stylesheet" href="pagina.css">
+    <title>Tea</title>
 </head>
+
 <body>
-    
+    <div id="user-esp">
+        <div id="user-info">
+            <div id="avatar"><img src="assets/oculos.png" alt="imagem do user" width="70px"></div>
+            <div id="user-name"><h1>user name</h1></div>
+            <div id="user-id"><p>id</p></div>
+        </div>
+    </div>
+
+    <div id="posts">
+        <div class="post model">
+            
+            <div id="post-title"></div>
+            <div id="post-cont"></div>
+    </div>
+
 </body>
+<script src="pagina.js"></script>
 </html>
